1.9.2.RC1 changes